--- a/package.json
+++ b/package.json
@@ -14,12 +14,27 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "assert": "^2.1.0",
+    "axios": "^1.6.0",
+    "http-browserify": "^1.7.0",
+    "https-browserify": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "stream-browserify": "^3.0.0",
     "styled-components": "^6.1.0",
+    "url": "^0.11.3",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
+  },
+  "resolve": {
+    "fallback": {
+      "http": "require.resolve('stream-http')",
+      "https": "require.resolve('https-browserify')",
+      "zlib": "require.resolve('browserify-zlib')",
+      "stream": "require.resolve('stream-browserify')"
+    }
   },
   "scripts": {
     "start": "react-scripts start",
