--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.2",
     "fonts": "^0.0.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "router": "^1.3.8",
     "styled-components": "^6.1.0",
     "web-vitals": "^2.1.4"
   },
@@ -45,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-router-dom": "^6.18.0"
   }
 }
