--- a/package.json
+++ b/package.json
@@ -11,18 +11,33 @@
     "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.15",
     "@mui/styled-engine-sc": "^6.0.0-alpha.3",
+    "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.3.2",
-    "fonts": "^0.0.2",
+    "assert": "^2.1.0",
+    "axios": "^1.6.0",
+    "firebase": "^10.6.0",
+    "http-browserify": "^1.7.0",
+    "https-browserify": "^1.0.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
-    "router": "^1.3.8",
+    "stream-browserify": "^3.0.0",
     "styled-components": "^6.1.0",
+    "url": "^0.11.3",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
+  },
+  "resolve": {
+    "fallback": {
+      "http": "require.resolve('stream-http')",
+      "https": "require.resolve('https-browserify')",
+      "zlib": "require.resolve('browserify-zlib')",
+      "stream": "require.resolve('stream-browserify')"
+    }
   },
   "scripts": {
     "start": "react-scripts start",
@@ -47,8 +62,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "react-router-dom": "^6.18.0"
   }
 }
