--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "https-browserify": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "redux-auth-wrapper": "^3.0.0",
     "stream-browserify": "^3.0.0",
     "styled-components": "^6.1.0",
     "url": "^0.11.3",
